fix: button collapses

--- a/css/styles.css
+++ b/css/styles.css
@@ -680,7 +680,7 @@ table {
 }
 
 [disable="true"] {
-  visibility: collapse;
+  visibility: hidden;
   opacity: 0;
 }
 
